# twins-dashboard

./: .env.example  .gitattributes  .gitignore  .mcp.json  google-stitch-prompt.md  middleware.ts  package-lock.json  package.json  vitest.config.ts
twins-content-engine/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
twins-content-engine/config/: brand.yaml  pillars.yaml  rules.yaml  service_area.yaml
twins-content-engine/data/: harvest_inbox.md
twins-content-engine/docs/: marketing-skills-playbook.md
twins-content-engine/engine/: brief.py  claude_client.py  cluster.py  config.py  db.py  generator.py  harvest.py  local_embedding.py  prompts.py  review.py  rules.py  sampling.py  schema.sql
twins-content-engine/scripts/: approve.py  emit_briefs.py  expand_clusters.py  generate_cluster.py  generate_week.py  harvest_refresh.py  ingest_seeds.py  publish_to_ghl.py  regenerate.py
twins-content-engine/tests/: conftest.py  test_brief.py  test_claude_client.py  test_cluster_expand.py  test_cluster_parse.py  test_config.py  test_db.py  test_generator.py  test_harvest.py  test_integration.py  test_local_embedding.py  test_prompts.py  test_review.py  test_rules.py  test_sampling.py
twins-payroll/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  sync_rules.py
twins-payroll/config/: bonus_tiers.yaml  hcp.yaml  rules.yaml  techs.yaml
twins-payroll/engine/: commission.py  config_loader.py  db.py  excel_writer.py  hcp_client.py  hcp_normalize.py  hcp_sync.py  models.py  ownership.py  parts_prompt.py  price_sheet.py  prompt_io.py  report_builder.py  schema.sql
twins-payroll/scripts/: reprint.py  run_payroll.py  show_run.py  sync.py  validate_config.py
twins-payroll/tests/: conftest.py  test_commission.py  (+13 more)
(+511 files in other folders)
