[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twins-payroll"
version = "0.1.0"
description = "Weekly payroll automation for Twins Garage Doors (HCP API + parts cost reconciliation)"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: hits real HCP API (gated by INTEGRATION=1)",
]
